Add token auth to swagger